# cli-py

./: .pre-commit-config.yaml  404.html  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: docs.yml
api/: index.html
api/app/: index.html
api/model_cache/: index.html
api/models/: index.html
api/scanner/: index.html
api/screens/: index.html
docs/: getting-started.md  index.md
docs/api/: app.md  index.md  model_cache.md  models.md  scanner.md  screens.md
getting-started/: index.html
search/: search_index.json
src/opensymbolicai_cli/: __init__.py  app.py  model_cache.py  models.py  scanner.py
src/opensymbolicai_cli/screens/: __init__.py  agent_details.py  agent_execution.py  settings.py
tests/: test_placeholder.py
